--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,14 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "php": ">=7.2.5",
+    "php": ">=8.0",
     "ext-ctype": "*",
     "ext-iconv": "*",
     "symfony/console": "5.2.*",
     "symfony/dotenv": "5.2.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.2.*",
+    "symfony/monolog-bundle": "^3.6",
     "symfony/yaml": "5.2.*"
   },
   "config": {
