--- a/composer.json
+++ b/composer.json
@@ -61,6 +61,9 @@
     "friendsofphp/php-cs-fixer": "^2.18",
     "roave/security-advisories": "dev-master",
     "symfony/maker-bundle": "^1.29",
-    "symfony/phpunit-bridge": "^5.2"
+    "symfony/phpunit-bridge": "^5.2",
+    "symfony/stopwatch": "^5.2",
+    "symfony/twig-bundle": "^5.2",
+    "symfony/web-profiler-bundle": "^5.2"
   }
 }
