--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,8 @@
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.18",
     "roave/security-advisories": "dev-master",
+    "symfony/browser-kit": "^5.2",
+    "symfony/css-selector": "^5.2",
     "symfony/maker-bundle": "^1.29",
     "symfony/phpunit-bridge": "^5.2",
     "symfony/stopwatch": "^5.2",
