--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "php": ">=8.0",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "doctrine/annotations": "^1.12",
     "symfony/console": "5.2.*",
     "symfony/dotenv": "5.2.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.2.*",
     "symfony/monolog-bundle": "^3.6",
+    "symfony/validator": "5.2.*",
     "symfony/yaml": "5.2.*"
   },
   "config": {
