--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,12 @@
 .phpunit
 .phpunit.result.cache
 /phpunit.xml
+/.phpunit.cache/
 ###< symfony/phpunit-bridge ###
 
 ###> friendsofphp/php-cs-fixer ###
 /.php_cs
 /.php_cs.cache
 ###< friendsofphp/php-cs-fixer ###
+
+/.yarn
