--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,17 @@
     "php": ">=8.0",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "composer/package-versions-deprecated": "1.11.99.1",
     "doctrine/annotations": "^1.12",
+    "doctrine/doctrine-bundle": "^2.2",
+    "doctrine/doctrine-migrations-bundle": "^3.0",
+    "doctrine/orm": "^2.8",
     "symfony/console": "5.2.*",
     "symfony/dotenv": "5.2.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.2.*",
     "symfony/monolog-bundle": "^3.6",
+    "symfony/proxy-manager-bridge": "5.2.*",
     "symfony/validator": "5.2.*",
     "symfony/yaml": "5.2.*"
   },
