Altered DB name and creds

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
     database:
         image: 'postgres:alpine'
         environment:
-            POSTGRES_PASSWORD: main
-            POSTGRES_USER: main
-            POSTGRES_DB: main
+            POSTGRES_PASSWORD: admin
+            POSTGRES_USER: admin
+            POSTGRES_DB: future_test
         ports:
             # To allow the host machine to access the ports below, modify the lines below.
             # For example, to allow the host to connect to port 3306 on the container, you would change
