--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
     "doctrine/doctrine-bundle": "^2.2",
     "doctrine/doctrine-migrations-bundle": "^3.0",
     "doctrine/orm": "^2.8",
+    "sensio/framework-extra-bundle": "^6.1",
     "symfony/console": "5.2.*",
     "symfony/dotenv": "5.2.*",
+    "symfony/finder": "5.2.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.2.*",
     "symfony/monolog-bundle": "^3.6",
