--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.18",
     "roave/security-advisories": "dev-master",
+    "squizlabs/php_codesniffer": "^3.5",
     "symfony/browser-kit": "^5.2",
     "symfony/css-selector": "^5.2",
     "symfony/maker-bundle": "^1.29",
