Added Symfony Front End, Encore and Webpack Ran into bug trying to use Internal Error: root-workspace-0b6124@workspace:.: This package doesn't seem to be present in your lockfile; try to make an install to update your resolutions     at J.getCandidates (/home/thomasbuckle-uk/dev/projects/future_publishing_test/FizzBuzz/FizzBuzz/.yarn/releases/yarn-berry.cjs:2:347296)     at n.getCandidates (/home/thomasbuckle-uk/dev/projects/future_publishing_test/FizzBuzz/FizzBuzz/.yarn/releases/yarn-berry.cjs:2:336286)     at /home/thomasbuckle-uk/dev/projects/future_publishing_test/FizzBuzz/FizzBuzz/.yarn/releases/yarn-berry.cjs:2:357942     at Module.w (/home/thomasbuckle-uk/dev/projects/future_publishing_test/FizzBuzz/FizzBuzz/.yarn/releases/yarn-berry.cjs:2:417413)     at C (/home/thomasbuckle-uk/dev/projects/future_publishing_test/FizzBuzz/FizzBuzz/.yarn/releases/yarn-berry.cjs:2:357905) had to fallback to using Running webpack ...
 DONE  Compiled successfully in 788ms8:56:42 AM

 I  5 files written to public/build
Entrypoint app [big] 546 KiB = runtime.js 15.1 KiB vendors-node_modules_symfony_stimulus-bridge_dist_index_js-node_modules_core-js_modules_es_ob-7db861.js 507 KiB app.css 390 bytes app.js 23.9 KiB
webpack compiled successfully
NOTE:
> dev
> encore dev

Running webpack ...

 DONE  Compiled successfully in 825ms8:56:44 AM

 I  5 files written to public/build
Entrypoint app [big] 546 KiB = runtime.js 15.1 KiB vendors-node_modules_symfony_stimulus-bridge_dist_index_js-node_modules_core-js_modules_es_ob-7db861.js 507 KiB app.css 390 bytes app.js 23.9 KiB
webpack compiled successfully also works

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "symfony/monolog-bundle": "^3.6",
     "symfony/proxy-manager-bridge": "5.2.*",
     "symfony/validator": "5.2.*",
+    "symfony/webpack-encore-bundle": "^1.11",
     "symfony/yaml": "5.2.*"
   },
   "config": {
