--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "doctrine/doctrine-migrations-bundle": "^3.0",
     "doctrine/orm": "^2.8",
     "sensio/framework-extra-bundle": "^6.1",
+    "symfony/asset": "5.2.*",
     "symfony/console": "5.2.*",
     "symfony/dotenv": "5.2.*",
     "symfony/finder": "5.2.*",
